objects/Budget_Line_Item__c/Budget_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Budget Line Item</label>
    <nameField>
        <displayFormat>BLI-{00000000}</displayFormat>
        <label>Budget Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>