objects/Budget_Line_Item__c/fields/Line_Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Description__c</fullName>
    <inlineHelpText>Please be as specific as possible to allow approvers to now what exactly it is you are buying for this line item</inlineHelpText>
    <label>Purchase Item Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>