objects/Budget_Line_Item__c/fields/MSA_Required__c.field-meta.xml
<CustomField>
    <fullName>MSA_Required__c</fullName>
    <formula>IF(Purchase_Item_Type_Lu__r.MSA_OR_PO_T_C_s__c = TRUE,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MSA Required</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>