objects/Budget_Line_Item__c/fields/MSA_Required_cb__c.field-meta.xml
<CustomField>
    <fullName>MSA_Required_cb__c</fullName>
    <defaultValue>0</defaultValue>
    <label>MSA Required Num</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>