objects/Budget_Line_Item__c/fields/Order_Form_Required__c.field-meta.xml
<CustomField>
    <fullName>Order_Form_Required__c</fullName>
    <formula>IF(Purchase_Item_Type_Lu__r.Order_Form__c = TRUE,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Form Required</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>