objects/Budget_Line_Item__c/fields/Order_Form_Required_num__c.field-meta.xml
<CustomField>
    <fullName>Order_Form_Required_num__c</fullName>
    <label>Order Form Required Num</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>