objects/Budget_Line_Item__c/fields/Purchase_Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Item_Type__c</fullName>
    <label>Purchase Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounting Fees</fullName>
            </value>
            <value>
                <fullName>Advertising</fullName>
            </value>
            <value>
                <fullName>Analyst Relations</fullName>
            </value>
            <value>
                <fullName>Audit Service Fees (External Auditor)</fullName>
            </value>
            <value>
                <fullName>Board Fees</fullName>
            </value>
            <value>
                <fullName>Branded Merchandise</fullName>
            </value>
            <value>
                <fullName>Building CAM Expense</fullName>
            </value>
            <value>
                <fullName>Business cards</fullName>
            </value>
            <value>
                <fullName>Business Insurance</fullName>
            </value>
            <value>
                <fullName>Business Licenses &amp; Taxes</fullName>
            </value>
            <value>
                <fullName>Car Lease</fullName>
            </value>
            <value>
                <fullName>CEO Airfare</fullName>
            </value>
            <value>
                <fullName>Charitable Donations</fullName>
            </value>
            <value>
                <fullName>Communication - Internet</fullName>
            </value>
            <value>
                <fullName>Communication - telephones</fullName>
            </value>
            <value>
                <fullName>Computer Hardware/Software Maintenance</fullName>
            </value>
            <value>
                <fullName>Computer Hardware &lt;$2,500</fullName>
            </value>
            <value>
                <fullName>Computer Hardware &gt;$2,500 - Fixed Assets</fullName>
            </value>
            <value>
                <fullName>Computer Software &lt;$2,500</fullName>
            </value>
            <value>
                <fullName>Computer Software &gt;$2,500 - Fixed Assets</fullName>
            </value>
            <value>
                <fullName>Construction in Progress (Leasehold Improvements)</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Content Development &amp; Creative Services</fullName>
            </value>
            <value>
                <fullName>Dues &amp; Subscriptions</fullName>
            </value>
            <value>
                <fullName>Equipment Rentals</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Facilities Janitorial</fullName>
            </value>
            <value>
                <fullName>Facilities Maintenance &amp; Repair</fullName>
            </value>
            <value>
                <fullName>Facilities Materials &amp; Supplies</fullName>
            </value>
            <value>
                <fullName>Facilities Moving Expenses</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>