objects/Budget_Line_Item__c/fields/Purchase_Item_Type_f__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Item_Type_f__c</fullName>
    <formula>Purchase_Item_Type_Lu__r.Purchase_Item_Desc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Item formula</label>
    <type>Text</type>
</CustomField>