objects/Budget_Line_Item__c/fields/Purchase_Item_Type_List__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Item_Type_List__c</fullName>
    <defaultValue>&quot;https://tanium.my.salesforce.com/00O0e000004vBsS&quot;</defaultValue>
    <label>Purchase Item Type List</label>
    <type>Url</type>
</CustomField>