objects/Budget_Line_Item__c/fields/Purchase_Item_Type_Lu__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Item_Type_Lu__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup on Purchase Item, please select &quot;All Fields&quot; while searching for better results</inlineHelpText>
    <label>Purchase Item Type</label>
    <referenceTo>Purchase_Item__c</referenceTo>
    <relationshipLabel>Budget Line Items</relationshipLabel>
    <relationshipName>Budget_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>