objects/Budget_Line_Item__c/fields/ROI_Required__c.field-meta.xml
<CustomField>
    <fullName>ROI_Required__c</fullName>
    <formula>IF(Purchase_Item_Type_Lu__r.ROI__c = TRUE,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ROI Required</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>