objects/Budget_Line_Item__c/fields/Sec_Review_Required__c.field-meta.xml
<CustomField>
    <fullName>Sec_Review_Required__c</fullName>
    <formula>IF(Purchase_Item_Type_Lu__r.Security_Review__c = TRUE,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sec Review Required</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>