objects/Budget_Line_Item__c/fields/SOW_Required_NUM__c.field-meta.xml
<CustomField>
    <fullName>SOW_Required_NUM__c</fullName>
    <label>SOW Required NUM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>